--- a/package.json
+++ b/package.json
@@ -19,6 +19,6 @@
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-sass": "^1.0.0",
     "grunt-contrib-watch": "^1.0.0",
-    "grunt-postcss": "^0.9.0",
+    "grunt-postcss": "^0.9.0"
   }
 }
